feat: CRUD for locations and controllers with errors and tests